force-app/main/default/objects/People__c/People__c.object-meta.xml
<CustomObject>
    <label>People</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>