force-app/main/default/objects/People__c/fields/Add_Expense_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Add_Expense_Trigger__c</fullName>
    <label>Add Expense Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>