force-app/main/default/objects/People__c/fields/Amount_Owed_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed_by_Me__c</fullName>
    <label>Amount Owed by Me</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>