force-app/main/default/objects/People__c/fields/Amount_Owed_Or_Owned_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed_Or_Owned_By_Me__c</fullName>
    <formula>Total_Expenses_Spent__c  -  Amount_Owed_by_Me__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt Owed or Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>