force-app/main/default/objects/People__c/fields/Total_Expenses_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Spent__c</fullName>
    <label>Total Amount Spent</label>
    <summarizedField>Tour_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Tour_Expense__c.People__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>