force-app/main/default/objects/People__c/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <label>Tour</label>
    <referenceTo>Tour__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>People</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>